--- a/index.html
+++ b/index.html
@@ -8,23 +8,30 @@
     <title>Momentum</title>
   </head>
   <body>
-    <form id="login-form" class="hidden">
-      <input required maxlength="15" type="text" placeholder="What is your name?" />
-      <button>Log In</button>
-    </form>
-
-    <h1 id="greeting" class="hidden"></h1>
-    <h2 id="clock">00:00:00</h2>
-
-    <form id="todo-form">
-      <input type="text" placeholder="Write a To Do and Press Enter." required />
-    </form>
-
-    <ul id="todo-list"></ul>
-
-    <div id="quote">
-      <span></span>
-      <span></span>
+    <div id="wrap">
+      <form id="login-form" class="hidden">
+        <input required maxlength="15" type="text" placeholder="What is your name?" />
+        <button>Log In</button>
+      </form>
+  
+      <h1 id="greeting" class="hidden"></h1>
+      <h2 id="clock">00:00:00</h2>
+  
+      <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter." required />
+      </form>
+  
+      <ul id="todo-list"></ul>
+  
+      <div id="quote">
+        <span></span>
+        <span></span>
+      </div>
+  
+      <div id="weather">
+        <span></span>
+        <span></span>
+      </div>
     </div>
 
     <!-- script -->
@@ -33,5 +40,6 @@
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
   </body>
 </html>    
